k8s/back-postgres-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: back-postgres-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app:  back-postgres
  template:
    metadata:
      labels:
        app:  back-postgres
    spec:
      containers:
        - name: back-postgres
          image: postgres:10.1
          imagePullPolicy: "IfNotPresent"
          ports:
            - containerPort: 5432
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: postgredb
      volumes:
        - name: postgredb
          persistentVolumeClaim:
            claimName: postgres-pv-claim
---
# apiVersion: v1
# kind: Service
# metadata:
#   name: back-postgres-srv
#   labels:
#     app: back-postgres
# spec:
#   type: NodePort
#   ports:
#     - port: 5432
#   selector:
#     app: back-postgres
apiVersion: v1
kind: Service
metadata:
  name: back-postgres-srv
spec:
  selector:
    app:  back-postgres
  ports:
    - name: db
      protocol: TCP
      port: 5432
      targetPort: 5432
